feat(quiz): modify mock and practice quiz
- Instructors can upload two different type of tests
- Instructors can choose free or paid and the end user or the student
  can only see the free option if the user is not enrolled.
